--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-      <h1><Vincent/h1>
+      <h1>Vincent</h1>
     </body>
 </html>
