init first version

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Home</title>
+    <title>Spttrs</title>
     <style>
       :root {
         --spacing: 1rem;
+      }
+
+      a {
+        color: #000;
       }
 
       html {
@@ -18,24 +22,6 @@
 
       .element {
         margin-bottom: var(--spacing);
-      }
-
-      .embed {
-        position: relative;
-      }
-
-      .embed:before {
-        display: block;
-        content: "";
-        width: 100%;
-        padding-top: 56.25%;
-      }
-      .embed > iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
       }
 
       .masthead {
@@ -49,36 +35,22 @@
         margin-bottom: var(--spacing);
       }
 
-      .work article {
-        display: flex;
+      footer {
+        text-align: center;
+      }
+
+      footer a {
+        padding-right: 0.5rem;
       }
     </style>
   </head>
   <body>
-    <header class="masthead">
-      <h1>Spttrs</h1>
-      <img class="element" src="https://placehold.it/600x600" />
-    </header>
-    <div class="work">
-      <article>
-        <div>
-          <h1>Qurrent</h1>
-          <p>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui
-            blanditiis praesentium voluptatum deleniti atque corrupti quos
-            dolores et quas
-          </p>
-        </div>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/XwSkQ_iFHyw"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      </article>
-    </div>
+    <header class="masthead"><h1>Spttrs</h1></header>
+    <footer>
+      <a href="https://www.instagram.com/ctrlaltdefeat_">Instagram</a>
+      <a href="mailto:v.spitters@post.com">E-mail</a>
+      <span>PS4 Network: Funeralclub</span>
+    </footer>
   </body>
 </html>
 
